name:                   atto-lisp
version:                0.2.1.2
license:                BSD3
license-file:           LICENSE
author:                 Thomas Schilling <nominolo@googlemail.com>
maintainer:             Thomas Schilling <nominolo@googlemail.com>
homepage:               http://github.com/nominolo/atto-lisp
synopsis:               Efficient parsing and serialisation of S-Expressions.
description:
  Efficient parsing and serialisation of S-Expressions.
category:               Text, Data
stability:              provisional
build-type:             Simple
cabal-version:          >= 1.10

library
  build-depends:
    attoparsec    >= 0.8.5.1 && < 0.11,
    base          >= 4.2     && < 5,
    blaze-builder >= 0.3     && < 0.4,
    blaze-textual >= 0.1     && < 0.3,
    bytestring    >= 0.9     && < 0.11,
    containers    >= 0.3     && < 0.6,
    deepseq       >= 1.1     && < 1.4,
    text          >= 0.10    && < 0.12

  exposed-modules:
    Data.AttoLisp

  ghc-options: -Wall
  default-language: Haskell2010

Test-Suite test
    Type:       exitcode-stdio-1.0
    Main-is:    test-attolisp.hs
    Hs-Source-Dirs: test 
    Build-depends: atto-lisp
                 , attoparsec
                 , base
                 , bytestring
                 , text 
                 , HUnit
                 , test-framework
                 , test-framework-hunit
    Default-language: Haskell2010
