name:                   atto-lisp
version:                0.2.2.3
license:                BSD3
license-file:           LICENSE
author:                 Thomas Schilling <nominolo@googlemail.com>
maintainer:             Thomas Schilling <nominolo@googlemail.com>
homepage:               http://github.com/nominolo/atto-lisp
synopsis:               Efficient parsing and serialisation of S-Expressions.
description:
  Efficient parsing and serialisation of S-Expressions.
category:               Text, Data
stability:              provisional
build-type:             Simple
cabal-version:          >= 1.10
extra-source-files:
  changelog.md

library
  build-depends:
    attoparsec,
    base         >= 4.2     && < 5,
    blaze-builder,
    blaze-textual,
    bytestring   ,
    containers   ,
    deepseq      ,
    text          

  exposed-modules:
    Data.AttoLisp

  ghc-options: -Wall
  default-language: Haskell2010

Test-Suite test
    Type:       exitcode-stdio-1.0
    Main-is:    test-attolisp.hs
    Hs-Source-Dirs: test
    Build-depends: atto-lisp
                 , attoparsec
                 , base
                 , bytestring
                 , text
                 , HUnit
                 , test-framework
                 , test-framework-hunit
    Default-language: Haskell2010
